--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -8,13 +8,33 @@
     android:visibility="visible"
     tools:context=".SecondActivity">
 
+    <TextView
+        android:id="@+id/satelliteTextView"
+        android:layout_width="111dp"
+        android:layout_height="29dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="satellites "
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.44"
+        tools:ignore="MissingConstraints" />
 
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="275dp"
-        android:layout_height="412dp"
-        tools:layout_editor_absoluteX="181dp"
-        tools:layout_editor_absoluteY="783dp"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="160dp"
+        android:layout_height="25dp"
+        android:layout_below="@+id/satelliteTextView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/satelliteTextView"
+        app:layout_constraintVertical_bias="0.528"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
