--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -8,12 +8,22 @@
     android:visibility="visible"
     tools:context=".SecondActivity">
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:background="@drawable/background1"
+        tools:ignore="MissingConstraints" />
+
     <TextView
         android:id="@+id/satelliteTextView"
         android:layout_width="111dp"
         android:layout_height="29dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:background="#E30B0B"
+        android:backgroundTint="#C12525"
         android:text="satellites "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,16 +35,18 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="160dp"
-        android:layout_height="25dp"
+        android:layout_width="375dp"
+        android:layout_height="357dp"
         android:layout_below="@+id/satelliteTextView"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:background="#8F7E7E"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/satelliteTextView"
-        app:layout_constraintVertical_bias="0.528"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
