--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#100F0F"
     android:visibility="visible"
-    tools:context=".SecondActivity">
+    tools:context=".models.SecondActivity">
 
     <ImageView
         android:id="@+id/imageView1"
