--- a/app/src/main/res/layout/apods_list.xml
+++ b/app/src/main/res/layout/apods_list.xml
@@ -1,6 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:id="@+id/image"
+        android:src="@drawable/header"
+        android:scaleType="centerCrop"
+        tools:ignore="MissingConstraints" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="568dp"
+        android:background="@android:color/white"
+        android:paddingLeft="10dp"
+        android:paddingTop="20dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="20dp"
+        tools:ignore="MissingConstraints">
+
+
+        <TextView
+            android:id="@+id/copyright"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="19dp"
+            android:layout_marginEnd="283dp"
+            android:text="copyright"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/copyright"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="34dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="305dp" />
+
+        <TextView
+            android:id="@+id/explanation"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/date"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="276dp"
+            android:text="explanation" />
+
+        <TextView
+            android:id="@+id/hdurl"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/explanation"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="35dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="286dp"
+            android:text="hdurl" />
+
+        <TextView
+            android:id="@+id/media_type"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/hdurl"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="269dp"
+            android:text="media_type" />
+
+        <TextView
+            android:id="@+id/service_version"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/media_type"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="31dp"
+            android:layout_marginTop="21dp"
+            android:layout_marginEnd="270dp"
+            android:text="service_version" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/service_version"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="257dp"
+            android:text="title" />
+
+        <TextView
+            android:id="@+id/url"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_below="@+id/title"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="264dp"
+            android:text="url" />
+
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
